# maia

./: Cargo.toml  LICENSE  README.md  TODO.md  rust-toolchain.toml
.github/: FUNDING.yml
maia-cli/: Cargo.toml
maia-core/: Cargo.toml
maia-core/src/: lib.rs
maia-core/src/module_system/: lifecycle.rs  loader.rs  mod.rs  registry.rs  resources.rs
maia-core/src/module_system/runtime/: mod.rs  wasm.rs
maia-core/src/runtime/: container.rs  mod.rs  native.rs  wasm.rs
maia-module/echo/: Cargo.toml  README.md  lib.rs
maia-sdk/: Cargo.toml
maia-sdk/src/: error.rs  lib.rs  traits.rs  types.rs
