[workspace]
resolver = "2"
members = [
    "maia-core",
    "maia-sdk",
    # "maia-cli",
    # "maia-module/*",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Maximilian Schuster"]
license = "MIT"
repository = "https://github.com/maxijaxi/maia"
# homepage = ""
rust-version = "1.85.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
bincode = "2.0.1"

# Networking
tonic = "0.14.2"
prost = "0.14.1"
quinn = "0.11.9"

# WASM runtime
wasmtime = "38.0.3"
wasmtime-wasi = "38.0.3"

# Discovery
mdns = "3.0.0"
libp2p = "0.56.0"

# Cryptography
ed25519-dalek = "2.2.0"
x25519-dalek = "2.0.1"
aes-gcm = "0.10.3"

# Utils
uuid = { version = "1.18.1", features = ["v4", "serde" ] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0.100"
thiserror = "2.0.17"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Testing
proptest = "1.9.0"
criterion = { version = "0.7.0", features = ["html_reports"] }

# CLI
clap = { version = "4.5.51", features = ["derive", "color"] }

# Internal crates
maia-core = { path = "maia-core" }
maia-sdk = { path = "maia-sdk" }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.bench]
inherits = "release"
debug = true
strip = "none"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]