[package]
name = "maia-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "maia"
path = "src/main.rs"

[dependencies]
# Core
maia-core = { workspace = true }
maia-sdk = { workspace = true }

clap = { workspace = true }


tokio = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }