[package]
name = "maia-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

libloading = { workspace = true }

# Internal
maia-sdk = { path = "../maia-sdk" }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
tempfile = "3.22.0"