[package]
name = "maia-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "rt"] }
async-trait = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
proptest = { workspace = true }

[features]
default = []
test-utils = ["tokio/test-util"]