[package]
name = "maia-module-echo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal crates
maia-sdk = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }